// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomOperation transform deprecated .function Custom Mutation w string function reference & auth 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform deprecated .function Custom Mutation w string function reference 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform deprecated .function Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform deprecated .function Schema w model, custom query, mutation, and subscription and ref of custom type with array modifier 1`] = `
"type PostCustomType 
{
  title: String
}

type Mutation {
  listPosts: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: [PostCustomType] @function(name: "myFunc") @aws_subscribe(mutations: ["listPosts"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform deprecated .function Schema w model, custom query, mutation, and subscription and ref of model with array modifier 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  listPosts: [Post] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: [Post] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: [Post] @function(name: "myFunc") @aws_subscribe(mutations: ["listPosts"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w required arg and enum 1`] = `
"enum LikePostReactionType {
  :shipit:
  :risitas:
}

type Mutation {
  likePost(postId: String!, reactionType: LikePostReactionType): Post 
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference & auth 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference 1`] = `
"type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline boolean return type 1`] = `
"type Mutation {
  likePost(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline custom return type 1`] = `
"type LikePostReturnType 
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Mutation {
  likePost(postId: String!): LikePostReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline datetime return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline float return type 1`] = `
"type Mutation {
  likePost(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline integer return type 1`] = `
"type Mutation {
  likePost(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline json return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline string return type 1`] = `
"type Mutation {
  likePost(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline boolean return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline custom return type 1`] = `
"type GetPostDetailsReturnType 
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Query {
  getPostDetails(postId: String!): GetPostDetailsReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline datetime return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline float return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline integer return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline json return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline string return type 1`] = `
"type Query {
  getPostDetails(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of custom type with array modifier 1`] = `
"type PostCustomType 
{
  title: String
}

type Mutation {
  listPosts: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onCreatePost: [PostCustomType] @function(name: "myFunc") @aws_subscribe(mutations: ["listPosts"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of model with array modifier 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  listPosts: [Post] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: [Post] @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription where .returns() matches referenced custom operation's scalar return type 1`] = `
"type Mutation {
  likePost: String @function(name: "likePost") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: String @function(name: "onLikePost") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with Model source & custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikeOrUpdatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost", "updatePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model multiple mutation sources 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Subscription {
  onAnyPostMutation: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost", "updatePost", "deletePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model single mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth and model ref works 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_api_key
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth works 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with multiple supported auth modes 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Query {
  customQuery: String @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "FnGetPostDetails") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function pipeline / mix 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @function(name: "FnGetPostDetails2") @function(name: "FnGetPostDetails3") @function(name: "myFunc2") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function string 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql escapes quotes 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE status = \\"active\\";") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql works 1`] = `
{
  "functionSchemaAccess": [],
  "functionSlots": [],
  "jsFunctions": [],
  "lambdaFunctions": {},
  "schema": "type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE;") @auth(rules: [{allow: private}])
}",
  "sqlStatementFolderPath": undefined,
}
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.sqlReference works 1`] = `
"type GetPostDetailsReturnType 
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(reference: "testQueryName") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform sql schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public}])
}"
`;

exports[`CustomOperation transform sql schema schema.add* will not accept custom operations of incompatible types 1`] = `
"type Post @model @auth(rules: [{allow: public}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public}])
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["updatePost"]) @auth(rules: [{allow: public}])
}"
`;
